--- a/ms-autenticacao/src/main/resources/application.yaml
+++ b/ms-autenticacao/src/main/resources/application.yaml
@@ -1,1 +1,38 @@
-spring.application.name=microservice
+server:
+  port: 8080
+
+spring:
+  datasource:
+    url: jdbc:postgresql://db-auth:5432/autenticacao_db
+    username: username
+    password: password
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        jdbc:
+          time_zone: UTC
+  jackson:
+    default-property-inclusion: non_null
+
+app:
+  jwt:
+    secret: "chave-secreta-muito-longa-e-segura-para-assinatura-jwt-meuhospital-2025-a1b2c3d4e5f6g7h8"
+    expiration: 3600000
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
+
+logging:
+  level:
+    org.springframework.security: INFO
+    org.hibernate.SQL: DEBUG
+    com.postechfiap.meuhospital: DEBUG
