--- a/ms-autenticacao/pom.xml
+++ b/ms-autenticacao/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 		<!-- JWT (Herdado do Pai) -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
