--- a/ms-autenticacao/src/main/resources/application-local.yaml
+++ b/ms-autenticacao/src/main/resources/application-local.yaml
@@ -2,6 +2,8 @@ spring:
   config:
     activate:
       on-profile: local
+  kafka:
+    bootstrap-servers: localhost:9093
 
   datasource:
     url: jdbc:postgresql://localhost:5432/autenticacao_db
