--- a/ms-agendamento/pom.xml
+++ b/ms-agendamento/pom.xml
@@ -46,10 +46,9 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		</dependency>
 
-		<!-- Driver de Banco de Dados (MySQL) -->
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 		</dependency>
 
 		<!-- Módulo de Contratos -->
