--- a/ms-autenticacao/src/main/resources/application.yaml
+++ b/ms-autenticacao/src/main/resources/application.yaml
@@ -3,12 +3,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://db-auth:5432/autenticacao_db
-    username: username
-    password: password
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
       max-lifetime: 1800000
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -18,6 +19,7 @@ spring:
         format_sql: true
         jdbc:
           time_zone: UTC
+
   jackson:
     default-property-inclusion: non_null
 
@@ -32,8 +34,8 @@ spring:
 
 app:
   jwt:
-    secret: "chave-secreta-muito-longa-e-segura-para-assinatura-jwt-meuhospital-2025-a1b2c3d4e5f6g7h8"
-    expiration: 3600000
+    secret: ${APP_JWT_SECRET}
+    expiration: ${APP_JWT_EXPIRATION_MS}
 
 springdoc:
   swagger-ui:
