--- a/ms-notificacao/src/main/resources/application.yaml
+++ b/ms-notificacao/src/main/resources/application.yaml
@@ -1,1 +1,45 @@
-spring.application.name=microservice
+server:
+  port: 8082
+
+spring:
+  # ----------------------------------------------------
+  # 1. Configuração do Kafka (Consumidor)
+  # ----------------------------------------------------
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS}
+    consumer:
+      group-id: notificacao-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+#      properties:
+#        spring.json.trusted.packages: "com.postechfiap.meuhospital.contracts.events"
+#        spring.json.value.default.type: com.postechfiap.meuhospital.contracts.events.ConsultaCriadaEvent
+  # ----------------------------------------------------
+  # 2. Configuração do MongoDB (Log de Auditoria)
+  # ----------------------------------------------------
+  data:
+    mongodb:
+      uri: ${SPRING_DATA_MONGODB_URI}
+  # ----------------------------------------------------
+  # 3. Configuração do Spring Mail (MailHog SMTP)
+  # ----------------------------------------------------
+  mail:
+    host: ${SPRING_MAIL_HOST}
+    port: ${SPRING_MAIL_PORT}
+    properties:
+      mail:
+        smtp:
+          auth: false
+          starttls.enable: false
+# ----------------------------------------------------
+# Propriedades da Aplicação
+# ----------------------------------------------------
+app:
+  kafka:
+    topic-notificacao: notificacao-events
+
+logging:
+  level:
+    com.postechfiap.meuhospital: DEBUG
+    org.springframework.mail: DEBUG
