--- a/ms-autenticacao/Dockerfile
+++ b/ms-autenticacao/Dockerfile
@@ -8,6 +8,7 @@ COPY ms-autenticacao/pom.xml ./ms-autenticacao/
 
 COPY ms-agendamento/pom.xml ./ms-agendamento/
 COPY ms-notificacao/pom.xml ./ms-notificacao/
+COPY ms-historico/pom.xml ./ms-historico/
 
 RUN mvn dependency:go-offline -B
 
