--- a/ms-historico/Dockerfile
+++ b/ms-historico/Dockerfile
@@ -4,18 +4,17 @@ WORKDIR /app
 COPY pom.xml .
 
 COPY meuhospital-contracts/pom.xml ./meuhospital-contracts/
-COPY ms-notificacao/pom.xml ./ms-notificacao/
-
 COPY ms-autenticacao/pom.xml ./ms-autenticacao/
 COPY ms-agendamento/pom.xml ./ms-agendamento/
+COPY ms-notificacao/pom.xml ./ms-notificacao/
 COPY ms-historico/pom.xml ./ms-historico/
 
 COPY meuhospital-contracts/src ./meuhospital-contracts/src
-COPY ms-notificacao/src ./ms-notificacao/src
+COPY ms-historico/src ./ms-historico/src
 
-RUN mvn clean install -pl ms-notificacao -am -Dfile.encoding=UTF-8 -B -V -DskipTests
+RUN mvn clean install -pl ms-historico -am -Dfile.encoding=UTF-8 -B -V -DskipTests
 
 FROM eclipse-temurin:21
 WORKDIR /app
-COPY --from=build /app/ms-notificacao/target/*.jar app.jar
+COPY --from=build /app/ms-historico/target/*.jar app.jar
 CMD ["java", "-jar", "app.jar"]
