--- a/ms-historico/pom.xml
+++ b/ms-historico/pom.xml
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 	<artifactId>ms-historico</artifactId>
 	<name>Microserviço de Histórico de Consultas</name>
-	<description>Microserviço de Histórico de Consultas Médicas e GraphQL API.</description>
+	<description>Armazena histórico de consultas para consultas flexíveis via GraphQL.</description>
 	<url/>
 
 	<dependencies>
@@ -24,6 +24,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-graphql</artifactId>
+		</dependency>
+
+		<!-- Segurança (Para verificar a role do usuário logado) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<!-- Persistência -->
@@ -38,6 +44,12 @@
 			<artifactId>postgresql</artifactId>
 		</dependency>
 
+		<!-- Comunicação Assíncrona (Consumidor) -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 		<!-- Módulo de Contratos (para DTOs) -->
 		<dependency>
 			<groupId>com.postechfiap.meuhospital</groupId>
@@ -49,6 +61,19 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
 		</dependency>
 	</dependencies>
 
